crates/ruff_python_formatter/tests/snapshots/format@module_dangling_comment2.py.snap
---
source: crates/ruff_python_formatter/tests/fixtures.rs
---
## Input
```python
__all__ = ["X", "XK", "Xatom", "Xcursorfont", "Xutil", "display", "error", "rdb"]
# Shared types throughout the stub
```

## Output
```python
__all__ = ["X", "XK", "Xatom", "Xcursorfont", "Xutil", "display", "error", "rdb"]
# Shared types throughout the stub
```
