crates/ruff_python_formatter/tests/snapshots/format@module_trailing_semi.py.snap
---
source: crates/ruff_python_formatter/tests/fixtures.rs
assertion_line: 264
input_file: crates/ruff_python_formatter/resources/test/fixtures/ruff/module_trailing_semi.py
---
## Input
```python
b = """
    This is a multiline string
    ending with a useless
    semicolon.
""";


a = "Another string. Keep the distance between 'a' and 'b'."
```

## Output
```python
b = """
    This is a multiline string
    ending with a useless
    semicolon.
"""


a = "Another string. Keep the distance between 'a' and 'b'."
```
