crates/ruff_python_formatter/tests/snapshots/format@newlines.pyi.snap
---
source: crates/ruff_python_formatter/tests/fixtures.rs
---
## Input
```python
###
# Blank lines around functions
###

x = 1

# comment

def f():
    pass


if True:
    x = 1

# comment

def f():
    pass


x = 1



# comment

def f():
    pass


x = 1



# comment
def f():
    pass


x = 1

# comment

# comment
def f():
    pass

x = 1

# comment
# comment

def f():
    pass

x = 1

# comment
# comment
def f():
    pass


x = 1


# comment



# comment



def f():
    pass
# comment


def f():
    pass

# comment

def f():
    pass


# comment

###
# Blank lines around imports.
###

def f():
    import x
    # comment
    import y


def f():
    import x

    # comment
    import y


def f():
    import x
    # comment

    import y


def f():
    import x
    # comment


    import y


def f():
    import x


    # comment
    import y


def f():
    import x

    # comment

    import y


def f():
    import x  # comment
    # comment

    import y


def f(): pass  # comment
# comment

x = 1


def f():
    pass


if True:
    def a():
        return 1
else:
    pass


# comment

x = 1

```

## Output
```python
###
# Blank lines around functions
###

x = 1

# comment

def f():
    pass

if True:
    x = 1

# comment

def f():
    pass

x = 1

# comment

def f():
    pass

x = 1

# comment
def f():
    pass

x = 1

# comment

# comment
def f():
    pass

x = 1

# comment
# comment

def f():
    pass

x = 1

# comment
# comment
def f():
    pass

x = 1

# comment

# comment

def f():
    pass

# comment

def f():
    pass

# comment

def f():
    pass

# comment

###
# Blank lines around imports.
###

def f():
    import x

    # comment
    import y

def f():
    import x

    # comment
    import y

def f():
    import x
    # comment

    import y

def f():
    import x
    # comment

    import y

def f():
    import x

    # comment
    import y

def f():
    import x

    # comment

    import y

def f():
    import x  # comment
    # comment

    import y

def f():
    pass  # comment

# comment

x = 1

def f():
    pass

if True:
    def a():
        return 1
else:
    pass

# comment

x = 1
```


## Preview changes
```diff
--- Stable
+++ Preview
@@ -134,6 +134,7 @@
 if True:
     def a():
         return 1
+
 else:
     pass
 
```
